--- a/unit_test/test_sell.html
+++ b/unit_test/test_sell.html
@@ -45,7 +45,7 @@
       <div class="col">
       </div>
       <div class="col-6">
-        <form name="listItem" action="" method="post" enctype="multipart/form-data">
+        <form name="listItem" action="sell.php" method="post" enctype="multipart/form-data">
           <div class="form-group">
             <label for="ItemNameInput">Name:*</label><br/>
             <input type="text" class="form-control" name="ItemName"/>
@@ -60,7 +60,7 @@
           </div>
           <div class="form-group">
             <label for="ItemTagInput">Tag:*</label>
-            <select class="form-control" id="ItemTag">
+            <select class="form-control" id="ItemTag" name="ItemTag">
               <option>Please choose one</option>
               <option>Electronic</option>
               <option>Fashion</option>
@@ -70,12 +70,15 @@
           </div>
           <div class="form-check form-check-inline mb-3">
             <label class="form-check-label pr-3" for="ItemAddressInput">Location:*</label>
-            <input class="form-check-input" type="radio" name="LocationRadio" id="LocationRadioAddress" value="Address" onclick="Location_Selection()">
+            <input class="form-check-input" type="radio" name="LocationRadio" id="LocationRadioAddress" value="Address" onclick="Location_Selection();">
             <label class="form-check-label" for="ItemAddressRadioInput">Address</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="LocationRadio" id="LocationRadioGPS" value="GPS" onclick="Location_Selection()">
+            <input class="form-check-input" type="radio" name="LocationRadio" id="LocationRadioGPS" value="GPS" onclick="Location_Selection();">
             <label class="form-check-label" for="ItemGPSRadioInput">GPS</label>
+          </div>
+          <div class="form-group">
+            <p id="msg"></p>
           </div>
           <div id="location" name="location">
           </div>
