Update Navbar for all page to identify user
Expose more features after user login

--- a/unit_test/test_login.html
+++ b/unit_test/test_login.html
@@ -6,68 +6,88 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
+
   <title>| TEST | Login - CATCHEE</title>
 </head>
 
 <body>
-<!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Catchee Login</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+      <img src="logo_full.svg" width="30" height="30" class="d-inline-block align-top"> CATCHEE
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="login" href="#">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Help</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About Us</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item mr-3">
+          <a class="nav-link" href="home.php"><i class="fas fa-home mr-1"></i>Home</a>
+        </li>
+        <li class="nav-item mr-3">
+          <a class="nav-link" href="#"><i class="fas fa-question-circle mr-1"></i>Help</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="fas fa-cat mr-1"></i>About Us</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav justify-content-end">
+        <li class="nav-item mr-3 active">
+          <a class="nav-link" id="nav_login" href="test_login.html">
+            <i class="fas fa-sign-in-alt mr-1"></i>Login<span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="nav_signup" href="test_signup.html"><i class="fas fa-user mr-1"></i>Sign Up</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Form -->
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col">
+      </div>
+      <div class="col-4">
+        <center><h2 class="mb-3">Login</h2></center>
+        <form name="signup" action="login.php" method="post">
+          <div class="form-group">
+            <!--<label for="UsernameInput">Username/Email:*</label> -->
+            <input type="text" class="form-control" name="credential" placeholder="Username/Email"/>
+          </div>
+          <div class="form-group">
+            <!--<label for="PasswordInitInput">Password:*</label> -->
+            <input type="password" class="form-control" name="password" placeholder="Password"/>
+          </div>
+          <div class="form-group">
+            <center><input type="submit" class="btn btn-primary px-5" name="submit_login" value="Login" onclick=""/></center>
+          </div>
+        </form>
+      </div>
+      <div class="col">
+      </div>
+    </div>
   </div>
-</nav>
 
-<!-- Form -->
-<div class="container mt-5">
-  <div class="row">
-    <div class="col">
-    </div>
-    <div class="col-8">
-      <form name="signup" action="login.php" method="post">
-        <div class="form-group">
-          <label for="UsernameInput">Username/Email:*</label>
-          <input type="text" class="form-control" name="credential"/>
-        </div>
-        <div class="form-group">
-          <label for="PasswordInitInput">Password:*</label>
-          <input type="password" class="form-control" name="password"/>
-        </div>
-        <div class="form-group">
-          <input type="submit" class="btn btn-primary" name="submit_login" onclick=""/>
-        </div>
-      </form>
-    </div>
-    <div class="col">
+  <div class="container mt-1">
+    <div class="row">
+      <div class="col">
+      </div>
+      <div class="col-4">
+        <center><label>Don't have an account?</label><a href="test_signup.html"> Sign up</a></center>
+      </div>
+      <div class="col">
+      </div>
     </div>
   </div>
-</div>
 
-<script type="text/javascript" src=""></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script type="text/javascript" src=""></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 </html>
