Update chat handler and load contact list

--- a/unit_test/test_chat.html
+++ b/unit_test/test_chat.html
@@ -7,6 +7,8 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
+
   <title>| TEST | Chat - CATCHEE</title>
 </head>
 
@@ -14,33 +16,39 @@
 <body>
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">CATCHEE</a>
+    <a class="navbar-brand" href="#">
+      <img src="logo_full.svg" width="30" height="30" class="d-inline-block align-top"> CATCHEE
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="home.php">Home</a>
+        <li class="nav-item mr-3" id="nav_list_home">
+          <a class="nav-link" href="home.php"><i class="fas fa-home mr-1"></i>Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" id="nav_login" href="test_login.html">Login</a>
+        <li class="nav-item mr-3" id="nav_list_sell">
+          <a class="nav-link" href="test_sell.html"><i class="fas fa-cube mr-1"></i>Sell</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link active" id="nav_signup" href="">Sign Up <span class="sr-only">(current)</span></a>
+        <li class="nav-item mr-3 active" id="nav_list_chat">
+          <a class="nav-link" href="#"><i class="fas fa-comments mr-1"></i>Chat<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Help</a>
+        <li class="nav-item mr-3" id="nav_list_help">
+          <a class="nav-link" href="#"><i class="fas fa-question-circle mr-1"></i>Help</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+        <li class="nav-item" id="nav_list_aboutus">
+          <a class="nav-link" href="#"><i class="fas fa-cat mr-1"></i>About Us</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      <ul class="navbar-nav justify-content-end">
+        <li class="nav-item mr-3">
+          <a class="nav-link" id="nav_login" href="test_login.html"><i class="fas fa-sign-in-alt mr-1"></i>Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="nav_signup" href="test_signup.html"><i class="fas fa-user mr-1"></i>Sign Up</a>
+        </li>
+      </ul>
     </div>
   </nav>
 
@@ -50,11 +58,11 @@
     <!-- Top -->
     <div class="row">
 
-      <div class="col-3 overflow-auto bg-dark rounded-left shadow-lg" id="recipients" name="recipients" style="height:450px;">
+      <div class="col-3 overflow-auto bg-dark rounded-left shadow-lg pt-2" id="recipients" name="recipients" style="height:65vh;">
 
       </div>
 
-      <div class="col-9 overflow-auto bg-light rounded-right shadow-lg" id="messages" name="messages" style="height:450px;">
+      <div class="col-9 overflow-auto bg-light rounded-right shadow-lg" id="messages" name="messages" style="height:65vh;">
 
       </div>
 
@@ -85,7 +93,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-  <script type="text/javascript" src="chat.js"></script>
+  <script type="text/javascript" src="user_identifier.js"></script>
+  <script type="text/javascript" src="chat_handler.js"></script>
 
 </body>
 </html>
