--- a/Map.html
+++ b/Map.html
@@ -1,30 +1,80 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Google map test</title>
-    <style>
-        #map{
-            height: 500px;
-            width:  100%;
-        }
-    </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#343a40">
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
+
+  <title>Map - CATCHEE</title>
 </head>
+
+
 <body>
-    <h1>Around me</h1>
-    <div id="map">
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+      <img src="logo_full.svg" width="30" height="30" class="d-inline-block align-top"> CATCHEE
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item mr-3" id="nav_list_home">
+          <a class="nav-link" href="home.php"><i class="fas fa-home mr-1"></i>Home</a>
+        </li>
+        <li class="nav-item mr-3" id="nav_list_sell">
+          <a class="nav-link" href="test_sell.html"><i class="fas fa-cube mr-1"></i>Sell</a>
+        </li>
+        <li class="nav-item mr-3" id="nav_list_chat">
+          <a class="nav-link" href="test_chat.html"><i class="fas fa-comments mr-1"></i>Chat</a>
+        </li>
+        <li class="nav-item mr-3 active" id="nav_list_map">
+          <a class="nav-link" href="#"><i class="fas fa-map-marked-alt mr-1"></i>Map<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item mr-3" id="nav_list_help">
+          <a class="nav-link" href="#"><i class="fas fa-question-circle mr-1"></i>Help</a>
+        </li>
+        <li class="nav-item" id="nav_list_aboutus">
+          <a class="nav-link" href="#"><i class="fas fa-cat mr-1"></i>About Us</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav justify-content-end">
+        <li class="nav-item mr-3">
+          <a class="nav-link" id="nav_login" href="test_login.html"><i class="fas fa-sign-in-alt mr-1"></i>Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="nav_signup" href="test_signup.html"><i class="fas fa-user mr-1"></i>Sign Up</a>
+        </li>
+      </ul>
     </div>
+  </nav>
 
-    <div id="addmarkers">
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col">
+        <center><h2 class="mb-3">Around Me</h2></center>
+        <div id="map" style="width:100%;height:75vh;">
 
+        </div>
+      </div>
     </div>
+  </div>
 
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUJtoW0d72cYPoxR7X1LonsgA9DcyfBZQ&callback=initMap">
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="Map.js" type="text/javascript" ></script>
+
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUJtoW0d72cYPoxR7X1LonsgA9DcyfBZQ&callback=initMap"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+  <script type="text/javascript" src="user_identifier.js"></script>
+  <script src="map.js" type="text/javascript" ></script>
 
 </body>
 </html>
