Add "map" link to navbar

--- a/unit_test/test_chat.html
+++ b/unit_test/test_chat.html
@@ -34,6 +34,9 @@
         <li class="nav-item mr-3 active" id="nav_list_chat">
           <a class="nav-link" href="#"><i class="fas fa-comments mr-1"></i>Chat<span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item mr-3" id="nav_list_map">
+          <a class="nav-link" href="map.html"><i class="fas fa-map-marked-alt mr-1"></i>Map</a>
+        </li>
         <li class="nav-item mr-3" id="nav_list_help">
           <a class="nav-link" href="#"><i class="fas fa-question-circle mr-1"></i>Help</a>
         </li>
@@ -58,7 +61,7 @@
     <!-- Top -->
     <div class="row">
 
-      <div class="col-3 overflow-auto bg-dark rounded-left shadow-lg pt-2" id="recipients" name="recipients" style="height:65vh;">
+      <div class="col-3 overflow-auto bg-dark rounded-left shadow-lg pt-2 pl-3 list-group" id="recipients" name="recipients" style="height:65vh;">
 
       </div>
 
