--- a/unit_test/test_sell.html
+++ b/unit_test/test_sell.html
@@ -32,6 +32,9 @@
         <li class="nav-item mr-3" id="nav_list_chat">
           <a class="nav-link" href="test_chat.html"><i class="fas fa-comments mr-1"></i>Chat</a>
         </li>
+        <li class="nav-item mr-3" id="nav_list_map">
+          <a class="nav-link" href="map.html"><i class="fas fa-map-marked-alt mr-1"></i>Map</a>
+        </li>
         <li class="nav-item mr-3" id="nav_list_help">
           <a class="nav-link" href="#"><i class="fas fa-question-circle mr-1"></i>Help</a>
         </li>
