Update search with filters

--- a/search_display.html
+++ b/search_display.html
@@ -10,11 +10,16 @@
 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
 
+        <!-- Search CSS -->
+        <link rel="stylesheet" type="text/css" href="search.css">
+
         <title>Catchee</title>
     </head>
 
 
     <body>
+
+
     <div class="container">
         <div class="row">
             <div class="col-3"></div>
@@ -30,8 +35,8 @@
             <div class="col-3"></div>
         </div>
         <div class="row">
-            <div class="col-3" id="filter"> </div>
-            <div class="col-9" id="result"></div>
+            <div class="col-4" id="filter"> </div>
+            <div class="col-8" id="result"></div>
         </div>
 
     </div>
